--- a/index.css
+++ b/index.css
@@ -1,12 +1,98 @@
 body{
-    background-color: #41C0F2;
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+    width: 100%; 
+    position: relative; /*Define a posição*/
+    background-image: url(./imgs/Backnetflix.jpg); /*define imagem de fundo*/
+    background-image: cover; 
+    background-repeat: no-repeat;/*Não permite que a magem de fundo repita*/
+    font-family: Arial, Helvetica, sans-serif; /*Fonte do body*/
+}
+
+body::before{
+    content: '';
+    background-color: rgba(0, 0, 1, 0.781);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.logo img{
+    height: 45px;
+    width: 167px;
+    position: relative;
+    z-index: 10;
+}
+
+.topo{
+    padding: 40px 50px;
+    z-index: 10;
+}
+
+.login_body{
+    padding: 60px;
+    z-index: 90;
+    position: relative;
+    max-width: 450px;
+    height: 400px; 
+    margin-left: 50%;
+    background-color: rgba(37, 37, 37, 0.918);
+    border-radius: 10px;
+    box-sizing: border-box;
+    transform: translateX(-50%);
+    
+}
+
+.login_body h1{
+    font-size: 32px;
+    color: #fff;
+    margin-top: 0;
+    position: relative;
+    margin-left: 35%;    
+    
+}
+
+.login_body input{
+    height: 50px;
+    width: 100%;
+    min-width: 200px;
+    color: #fff;
+    background-color: #333;
+    border: none;
+    border-radius: 5px;
+    padding-left: 15px;
+    box-sizing: border-box;
+    outline: none;
 
 }
-.btn{
-    position: relative;
-    background-color: aqua;
-    max-width: 100%;
-    max-height: 300px;
-    left: 50%;
-    top: 50%;
+
+.login_body input:hover{
+    background-color: #444;
+}
+.input_caixa{
+    margin-bottom: 25px;
+
+}
+
+.login_body button{
+    height: 50px;
+    width: 100%;
+    color: #fff;
+    background-color: red;
+    border-radius: 3px;
+    font-weight: bold;
+    font-size: 16px;
+    border: none;
+    margin-bottom: 10px;
+    min-width: 200px;
+}
+
+.login_body button:hover{
+    background-color: rgb(160, 7, 7);
+    color: rgb(185, 185, 185);
+    cursor: pointer; /*Mouse virar mão*/
 }
