Ajustando as imagens da requisição

--- a/home.css
+++ b/home.css
@@ -109,3 +109,16 @@ body{
     padding: 15px 30px;
     transition: all .2s ease-in-out;
 }
+
+
+.filme ul {
+  margin: auto;
+}
+
+.filme li {
+  display: inline-block;
+  padding: 100px;
+  
+}
+
+
