--- a/index.css
+++ b/index.css
@@ -29,37 +29,35 @@ body::before{
 }
 
 .topo{
-    padding: 10px;
+    padding: 50px;
     z-index: 10;
+    
 }
 
 .login_body{
-    padding: 50px;
+    padding: 10px;
     z-index: 90;
     position: relative;
-    max-width: 450px;
+    max-width: 50%;
     min-height: 400px;
-    margin-left: 50%;
-    height: 400px; 
+    margin: auto;
     background-color: rgba(37, 37, 37, 0.918);
     border-radius: 10px;
     box-sizing: border-box;
-    transform: translateX(-50%);
-    
+        
 }
 
 .login_body h1{
     font-size: 32px;
     color: #fff;
-    margin-top: 0;
-    position: relative;
-    margin-left: 35%;    
+    text-align: center;
+    position: relative;   
     
 }
 
 .login_body input{
     height: 50px;
-    width: 100%;
+    width: 70%;
     min-width: 200px;
     color: #fff;
     background-color: #333;
@@ -68,6 +66,8 @@ body::before{
     padding-left: 15px;
     box-sizing: border-box;
     outline: none;
+    display: flex;
+    margin: auto;
 
 }
 
@@ -81,15 +81,19 @@ body::before{
 
 .login_body button{
     height: 50px;
-    width: 100%;
+    width: 40%;
     color: #fff;
     background-color: red;
     border-radius: 3px;
     font-weight: bold;
     font-size: 16px;
     border: none;
-    margin-bottom: 10px;
+    outline: none;
     min-width: 200px;
+    margin: auto;
+    align-items: center;
+    margin-left: 30%
+    
 }
 
 .login_body button:hover{
@@ -109,4 +113,28 @@ body::before{
     max-width: 50px;
     font-size: 10px;
 
+}
+
+
+@media screen AND (max-width: 750px) {
+    .topo{
+        padding: 50px;
+        z-index: 10;
+        text-align: center;
+    }
+    .login_body{
+        padding: 10px;
+        z-index: 90;
+        position: relative;
+        max-width: 300px;
+        min-height: 400px;
+        margin: auto;
+        background-color: rgba(37, 37, 37, 0.918);
+        border-radius: 10px;
+        box-sizing: border-box;
+        
+    }
+    .login_body button{
+        margin-left: 15%
+    }
 }
